Few changes to styles.css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </nav>
 <div class="row">
   <div class="col-sm-8 col-lg-6 preview-section">
-    <img class="mt-5 pt-3 cart-image" src="images/image-product-1.jpg" alt="product 1 image" height="350" width="350">
+    <img class="mt-5 cart-image" src="images/image-product-1.jpg" alt="product 1 image">
       <ul class="list-group thumbnails-list">
         <li><img src="images/image-product-2-thumbnail.jpg" alt=""></li>
         <li><img src="images/image-product-3-thumbnail.jpg" alt=""></li>
@@ -66,24 +66,6 @@
 
 <!-- 
 
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
+  https://gouthamkamath.github.io/ecommerce-product-page/
 
  -->
